<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorButton"
        android:gravity="start|center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtTracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tracking"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/rbOption1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/high"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbOption2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/balanced"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbOption3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/batterysaver"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbOption4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="Time between location"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbOption5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="Distance between location"
                android:textSize="16sp" />
        </RadioGroup>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnStartTracking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/start_tracking"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnStopTracking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_enable"
                android:text="@string/stop_tracking"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </TableRow>
    </LinearLayout>
</RelativeLayout>